# decept

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: lib.rs
web/: index.css  index.html  index.js
