[package]
name = "decept"
version = "0.1.0"
edition = "2024"

[dependencies]
rhai = { version = "1.24", features = ["wasm-bindgen"] }
rhai-rand = "0.1.6"
regex = "1"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]